board_builds/20260402_180632_f103c8-bluepill_debug_app/build.stderr.log
    Updating crates.io index
     Locking 1 package to latest Rust 1.92.0 compatible version
      Adding stm32f1 v0.16.0
 Downloading crates ...
  Downloaded stm32f1 v0.16.0
    Blocking waiting for file lock on package cache
   Compiling stm32f1 v0.16.0
   Compiling critical-section v1.2.0
   Compiling cortex-m-rt v0.7.5
   Compiling CortexOS v0.1.0 (D:\Code\microOS\CortexOS)
error[E0616]: field `csr` of struct `stm32f1::stm32f103::rcc::RegisterBlock` is private
  --> src\bsp\f103c8_bluepill.rs:81:19
   |
81 |     let csr = rcc.csr.read().bits();
   |                   ^^^ private field
   |
help: a method `csr` also exists, call it with parentheses
   |
81 |     let csr = rcc.csr().read().bits();
   |                      ++

error[E0616]: field `csr` of struct `stm32f1::stm32f103::rcc::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:101:9
    |
101 |     rcc.csr.modify(|r, w| unsafe { w.bits(r.bits() | (1 << 24)) });
    |         ^^^ private field
    |
help: a method `csr` also exists, call it with parentheses
    |
101 |     rcc.csr().modify(|r, w| unsafe { w.bits(r.bits() | (1 << 24)) });
    |            ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:101:24
    |
101 |     rcc.csr.modify(|r, w| unsafe { w.bits(r.bits() | (1 << 24)) });
    |                        ^           - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
101 |     rcc.csr.modify(|r, w: /* Type */| unsafe { w.bits(r.bits() | (1 << 24)) });
    |                         ++++++++++++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:101:21
    |
101 |     rcc.csr.modify(|r, w| unsafe { w.bits(r.bits() | (1 << 24)) });
    |                     ^                     - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
101 |     rcc.csr.modify(|r: /* Type */, w| unsafe { w.bits(r.bits() | (1 << 24)) });
    |                      ++++++++++++

error[E0616]: field `apb2enr` of struct `stm32f1::stm32f103::rcc::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:111:12
    |
111 |     dp.RCC.apb2enr.modify(|r, w| unsafe {
    |            ^^^^^^^ private field
    |
help: a method `apb2enr` also exists, call it with parentheses
    |
111 |     dp.RCC.apb2enr().modify(|r, w| unsafe {
    |                   ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:111:31
    |
111 |     dp.RCC.apb2enr.modify(|r, w| unsafe {
    |                               ^
112 |         w.bits(r.bits() | APB2_AFIOEN | APB2_IOPAEN | APB2_IOPCEN | APB2_TIM1EN | APB2_USART1EN)
    |         - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
111 |     dp.RCC.apb2enr.modify(|r, w: /* Type */| unsafe {
    |                                ++++++++++++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:111:28
    |
111 |     dp.RCC.apb2enr.modify(|r, w| unsafe {
    |                            ^
112 |         w.bits(r.bits() | APB2_AFIOEN | APB2_IOPAEN | APB2_IOPCEN | APB2_TIM1EN | APB2_USART1EN)
    |                - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
111 |     dp.RCC.apb2enr.modify(|r: /* Type */, w| unsafe {
    |                             ++++++++++++

error[E0616]: field `mapr` of struct `stm32f1::stm32f103::afio::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:116:10
    |
116 |         .mapr
    |          ^^^^ private field
    |
help: a method `mapr` also exists, call it with parentheses
    |
116 |         .mapr()
    |              ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:117:21
    |
117 |         .modify(|r, w| unsafe { w.bits(r.bits() & !(1 << 2)) });
    |                     ^           - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
117 |         .modify(|r, w: /* Type */| unsafe { w.bits(r.bits() & !(1 << 2)) });
    |                      ++++++++++++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:117:18
    |
117 |         .modify(|r, w| unsafe { w.bits(r.bits() & !(1 << 2)) });
    |                  ^                     - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
117 |         .modify(|r: /* Type */, w| unsafe { w.bits(r.bits() & !(1 << 2)) });
    |                   ++++++++++++

error[E0616]: field `crh` of struct `stm32f1::stm32f103::gpioa::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:119:28
    |
119 |     let mut crh = dp.GPIOA.crh.read().bits();
    |                            ^^^ private field
    |
help: a method `crh` also exists, call it with parentheses
    |
119 |     let mut crh = dp.GPIOA.crh().read().bits();
    |                               ++

error[E0616]: field `crh` of struct `stm32f1::stm32f103::gpioa::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:125:14
    |
125 |     dp.GPIOA.crh.write(|w| unsafe { w.bits(crh) });
    |              ^^^ private field
    |
help: a method `crh` also exists, call it with parentheses
    |
125 |     dp.GPIOA.crh().write(|w| unsafe { w.bits(crh) });
    |                 ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:125:25
    |
125 |     dp.GPIOA.crh.write(|w| unsafe { w.bits(crh) });
    |                         ^           - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
125 |     dp.GPIOA.crh.write(|w: /* Type */| unsafe { w.bits(crh) });
    |                          ++++++++++++

error[E0616]: field `crh` of struct `stm32f1::stm32f103::gpioa::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:128:30
    |
128 |     let mut c_crh = dp.GPIOC.crh.read().bits();
    |                              ^^^ private field
    |
help: a method `crh` also exists, call it with parentheses
    |
128 |     let mut c_crh = dp.GPIOC.crh().read().bits();
    |                                 ++

error[E0616]: field `crh` of struct `stm32f1::stm32f103::gpioa::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:131:14
    |
131 |     dp.GPIOC.crh.write(|w| unsafe { w.bits(c_crh) });
    |              ^^^ private field
    |
help: a method `crh` also exists, call it with parentheses
    |
131 |     dp.GPIOC.crh().write(|w| unsafe { w.bits(c_crh) });
    |                 ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:131:25
    |
131 |     dp.GPIOC.crh.write(|w| unsafe { w.bits(c_crh) });
    |                         ^           - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
131 |     dp.GPIOC.crh.write(|w: /* Type */| unsafe { w.bits(c_crh) });
    |                          ++++++++++++

error[E0616]: field `bsrr` of struct `stm32f1::stm32f103::gpioa::RegisterBlock` is private
   --> src\bsp\f103c8_bluepill.rs:132:14
    |
132 |     dp.GPIOC.bsrr.write(|w| unsafe { w.bits(1 << 13) });
    |              ^^^^ private field
    |
help: a method `bsrr` also exists, call it with parentheses
    |
132 |     dp.GPIOC.bsrr().write(|w| unsafe { w.bits(1 << 13) });
    |                  ++

error[E0282]: type annotations needed
   --> src\bsp\f103c8_bluepill.rs:132:26
    |
132 |     dp.GPIOC.bsrr.write(|w| unsafe { w.bits(1 << 13) });
    |                          ^           - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
132 |     dp.GPIOC.bsrr.write(|w: /* Type */| unsafe { w.bits(1 << 13) });
    |                           ++++++++++++

Some errors have detailed explanations: E0282, E0616.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `CortexOS` (bin "CortexOS") due to 18 previous errors
